--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/galaxia.jpg);
-      background-size:1024px 1024px;
-      min-height:50%;
-      background-size:cover;
+      background-image: url(IMG/blackspace.jpg);
+      background-size:1920px 1080px;
+      min-height:100%;
+      
+      background-size: cover;
       }
   </style>
 
 <style type="text/css">
     .Titulo { 
           margin: 0px;
-          font-family: "Homer Simpson UI";
+          font-family: "Optima";
           color: white; 
-          font-size: 40px;
+          font-size: 50px;
           text-align: center;
-          background-image: url(IMG/galaxia.jpg);
+          background-image: url(IMG/black.jpg);
           background-size: cover;
           padding: 3px 10px;
-          border: black 5px solid;
+          border: white 5px solid;
           background-attachment: fixed;
           position: fixed;
           height: 60px;
@@ -45,6 +46,44 @@ body {
 
   }
   </style>
+
+<style type="text/css">
+    .bloque1 { 
+          color: yellow;
+
+  }
+  </style>
+
+<style type="text/css">
+    .bloque2 { 
+          color: lightyellow;
+
+  }
+  </style>
+
+<!-- Links Style CSS -->
+
+<style>
+        a:link {
+            color: darkred;
+            text-decoration: none;
+        }
+  
+        a:visited {
+            color: white;
+        }
+  
+        a:hover {
+            color: darkorange;
+            text-decoration: underline;
+            font-size: 20px;
+            font-family: monospace;
+        }
+  
+        a:active {
+            color: darkred;
+        }
+    </style>
 
 <!-- CSS Block End -->
 
@@ -75,31 +114,31 @@ body {
 </div>
 
 <div align="center">
-  <a href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
+  <a target="_blank" href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
 </div>
 
 <div align="center">
-  <a href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a> 
+  <a target="_blank" href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a> 
 </div>
 
 <div align="center">
-  <a href= "https://twitter.com/archydoomer"> Twitter </a> 
+  <a target="_blank" href= "https://twitter.com/archydoomer"> Twitter </a> 
 </div>
 
 <div align="center">
-  <a href= "https://www.instagram.com/Doomer6699/"> Instagram </a> 
+  <a target="_blank" href= "https://www.instagram.com/Doomer6699/"> Instagram </a> 
 </div>
 
 <div align="center">
-  <a href= "https://www.doomworld.com/profile/34949-doomguykiller69/"> Doom World </a> 
+  <a target="_blank" href= "https://www.doomworld.com/profile/34949-doomguykiller69/"> Doom World </a> 
 </div>
 
 <div align="center">
-  <a href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
+  <a target="_blank" href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
 </div>
 
 <div align="center">
-  <a href= "https://discord.gg/W6VQsjVTJg"> Discord </a> 
+  <a target="_blank" href= "https://discord.gg/W6VQsjVTJg"> Discord </a> 
 </div>
 
 <div align="center"> 
@@ -197,7 +236,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <div align="center">
-  <a href= "https://itch.io/blog/469022/el-nuevo-juego-que-unir-universos-alternos-en-8bits"> Ve el nuevo Devlog aquí </a> 
+  <a target="_blank" href= "https://itch.io/blog/469022/el-nuevo-juego-que-unir-universos-alternos-en-8bits"> Ve el nuevo Devlog aquí </a> 
 </div>
 
 <div align="center">
@@ -214,7 +253,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center">
-  <a href= "blog.html"> Ve el nuevo Blog aquí </a> 
+  <a target="_blank" href= "blog.html"> Ve el nuevo Blog aquí </a> 
 </div>
 
 <br>
@@ -232,7 +271,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="https://youtu.be/HWdKuMJTJ1M">
+<form target="_blank" method="get" action="https://youtu.be/HWdKuMJTJ1M">
 
   <button type="submit">
 
@@ -248,7 +287,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="aboutme.html">
+<form target="_blank" method="get" action="aboutme.html">
 
   <button type="submit">
 
@@ -264,7 +303,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="blog.html">
+<form target="_blank" method="get" action="blog.html">
 
   <button type="submit">
 
@@ -280,7 +319,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="music.html">
+<form target="_blank" method="get" action="music.html">
 
   <button type="submit">
 
@@ -296,7 +335,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="lore.html">
+<form target="_blank" method="get" action="lore.html">
 
   <button type="submit">
 
@@ -312,7 +351,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="games.html">
+<form target="_blank" method="get" action="games.html">
 
   <button type="submit">
 
@@ -328,7 +367,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="fs.html">
+<form target="_blank" method="get" action="fs.html">
 
   <button type="submit">
 
@@ -344,7 +383,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="meme.html">
+<form target="_blank" method="get" action="meme.html">
 
   <button type="submit">
 
@@ -360,7 +399,23 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<form method="get" action="https://youtu.be/9NcPvmk4vfo">
+<form target="_blank" method="get" action="download.html">
+
+  <button type="submit">
+
+    <b>Descargas Directas</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="https://youtu.be/9NcPvmk4vfo">
 
   <button type="submit">
 
@@ -398,31 +453,31 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UCRJ3R_v78u9JvU5cvfkAaWg"> Un CheemsJolote </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCRJ3R_v78u9JvU5cvfkAaWg"> Un CheemsJolote </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UCYcOJgC3tyKLnbSRtrPsZAw"> Bala </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCYcOJgC3tyKLnbSRtrPsZAw"> Bala </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UCPaQmL2_7ux2zqFoUnwqCPA"> Toyota Corolla </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCPaQmL2_7ux2zqFoUnwqCPA"> Toyota Corolla </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UC-RnyUn9SkxAHaIflGoH50A"> Usario generico </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UC-RnyUn9SkxAHaIflGoH50A"> Usario generico </a> 
 </div>
 
 <div align="left">
-  <a href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
 </div>
 
 <br>
@@ -432,12 +487,15 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 <div align="center">
-  <b>Only quality trash since 2018.<b>
-</div>
+  <b>Only quality trash since 2018.</b>
 
 <div align="center">
-  <b>-Doomer-<b>
+  <b> <a target="_blank" href="banana.html">-Doomer-</a> <b>
+
 </div>
+
+</div>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
