--- a/download.html
+++ b/download.html
@@ -63,56 +63,56 @@ body {
 <br>
 
 <div align="center"> 
-<p>THE POTATO GAME 0.3 Especial Halloween 2022<a download="ThePotatoT&T2022"  href="ROM/TOTThePotatoVe0.3.gb"> Descargar</a>
+<p>THE POTATO GAME 0.3 Especial Halloween 2022<a download="ThePotatoT&T2022.gb"  href="ROM/TOTThePotatoVe0.3.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>THE POTATO GAME 0.3 Gameboy Classic <a download="ThePotatoGameClassic"  href="ROM/ThePotatoGameNoColorVer0.3C.gb"> Descargar</a>
+<p>THE POTATO GAME 0.3 Gameboy Classic <a download="ThePotatoGameClassic.gb"  href="ROM/ThePotatoGameNoColorVer0.3C.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>THE POTATO GAME 0.3 Gameboy Color<a download="ThePotatoGameColor"  href="ROM/ThePotatoGameColorVer0.3C.gb"> Descargar</a>
+<p>THE POTATO GAME 0.3 Gameboy Color<a download="ThePotatoGameColor.gb"  href="ROM/ThePotatoGameColorVer0.3C.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>THE POTATO Rotation spin-off <a download="ThePotatoRotation"  href="ROM/ThePotatoRotationVer0.1B.gb"> Descargar</a>
+<p>THE POTATO Rotation spin-off <a download="ThePotatoRotation.gb"  href="ROM/ThePotatoRotationVer0.1B.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>Deep In The Dark Will Never Shine Demo 0.2 Gameboy Classic <a download="DeepInTheDarkClassic"  href="ROM/Deep In The Dark Will Never Shine Demo 0.2.gb"> Descargar</a>
+<p>Deep In The Dark Will Never Shine Demo 0.2 Gameboy Classic <a download="DeepInTheDarkClassic.gb"  href="ROM/Deep In The Dark Will Never Shine Demo 0.2.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>Deep In The Dark Will Never Shine Demo 0.2 Gameboy Color <a download="DeepInTheDarkColor"  href="ROM/Deep In The Dark Will Never Shine Color Demo 0.2.gb"> Descargar</a>
+<p>Deep In The Dark Will Never Shine Demo 0.2 Gameboy Color <a download="DeepInTheDarkColor.gb"  href="ROM/Deep In The Dark Will Never Shine Color Demo 0.2.gb"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>Paleta de colores Libresprite para GBStudio<a download="PaletteGbstudio"  href="ROM/GBStudioPalette.aseprite"> Descargar</a>
+<p>Paleta de colores Libresprite para GBStudio<a download="PaletteGbstudio.aseprite"  href="ROM/GBStudioPalette.aseprite"> Descargar</a>
 </p>
 </div>
 
 <br>
 
 <div align="center"> 
-<p>Paleta de colores Libresprite para GBStudio/SuperGameboy<a download="PaletteGbstudioSuper"  href="ROM/GBStudioPaletteSGB.aseprite"> Descargar</a>
+<p>Paleta de colores Libresprite para GBStudio/SuperGameboy<a download="PaletteGbstudioSuper.aseprite"  href="ROM/GBStudioPaletteSGB.aseprite"> Descargar</a>
 </p>
 </div>
 
