--- a/index.html
+++ b/index.html
@@ -262,6 +262,27 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <img src="GIF/gatogordo.gif" height="150px" width="180px">
 </div>
 
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<br>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Edit de Patagonia Pro </a> 
+</div>
+
+<br>
+
+<div align="center">
+<img src="IMG/patagoniaedit.jpg" height="225px" width="280px">
+</div>
+
+<br>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
@@ -478,6 +499,10 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="left">
   <a target="_blank" href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
+</div>
+
+<div align="left">
+  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Patagonia Editor Pro </a> 
 </div>
 
 <br>
