--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div align="center"><h1> ¡New! </h1></div>
+<div align="center"><h1> ¡Un extra especial fin de temporada a la orden! </h1></div>
 
 <br>
 
 <div align="center"> 
-<b> Los Directos mas recientes estaran aquí!
+<b> EL EXTRA ESPECIAL FIN DE AÑO! UNA LOCURA!
 </b>
 </div>
 
@@ -211,7 +211,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
-<iframe width="300" height="300" src="https://www.youtube.com/embed/EbR7_FREPwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="360" height="315" src="https://www.youtube.com/embed/3BatJyKcpCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
