--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,30 @@ body {
 
 <!-- CSS Block End -->  
 
+
+<div align="center"><h2 class="bloque1">
+  <b>01 de Enero del año 2023 03:24PM<b>
+</div></h2></div>
+
+<br>
+
+<div align="center">
+  <b>FELIZ AÑO NUEVO USUARIO GENERICO!<b>
+    <br> 
+    <b>Despues de un largo pero muy jodidamente largo directo especial de fin de temporada y de año puedo descansar y relajarme en esta tarde nublada de Domingo, por ahora tengo planeado crear una nueva seccion en esta pagina recomendado videojuegos retro o hackroms, siendo una de mis primeras recomendaciones el hackrom de Doom Master Edition para la PS1, continuar con el diseño de personajes para el videojuego del canal y pensar en la historia de la siguiente temporada de Doomer Live, por ahora le dare un tiempo a Doomer Live para hacer directos de Doomer en Doom y Doomer en Minecraft, eso es todo por ahora usuario generico! gracias por leer hasta pronto, Siyachomp!!!<b>
+  </div>
+
+<div align="center">
+<img src="GIF/mars.gif" height="320px" width="320px">
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
 <div align="center"><h2 class="bloque1">
   <b>30 de Diciembre del año 2022 11:34AM<b>
 </div></h2></div>
