--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center"> 
-<b> EL EXTRA ESPECIAL FIN DE AÑO! UNA LOCURA!
+<b> EL EXTRA ESPECIAL FIN DE AÑO! UNA LOCURA DE 9 HORAS!
 </b>
 </div>
 
@@ -245,21 +245,18 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center"> 
-<b> Nuevo blog antes del especial fin de año!
-</b>
+<div align="center"><h1> ¡Nuevo blog post Especial Fin de año/fin de temporada!</h1></div>
+
+<br>
+
+<div align="center">
+  <a target="_blank" href= "blog.html"> Click aquí para ver el blog! </a> 
 </div>
 
 <br>
 
 <div align="center">
-  <a target="_blank" href= "blog.html"> Ve el nuevo Blog aquí </a> 
-</div>
-
-<br>
-
-<div align="center">
-<img src="GIF/gatogordo.gif" height="150px" width="180px">
+<img src="GIF/mars.gif" height="150px" width="150px">
 </div>
 
 <br>
