--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
     .Titulo { 
           margin: 0px;
           font-family: "Optima";
-          color: white; 
+          color: darkred; 
           font-size: 50px;
           text-align: center;
           background-image: url(IMG/black.jpg);
@@ -422,6 +422,22 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <button type="submit">
 
     <b>Descargas Directas</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="doom.html">
+
+  <button type="submit">
+
+    <b>Doom Master Edition By GEC</b>
 
   </button>
 
