--- a/doom.html
+++ b/doom.html
@@ -255,6 +255,18 @@ Por ahora solo queda esperar, ve a descargar este increible juego a su post ofic
 <img src="IMG/doomer.png" height="70px" width="200px">
 </div>
 
+<br>
+
+<div align="center">
+
+<div align="center">
+  <a href= "index.html">- Back -</a> 
+</div>
+  
+</div>
+
+<br>
+
 </body>
 
 </html>
