--- a/doom.html
+++ b/doom.html
@@ -145,6 +145,12 @@ Por ahora solo queda esperar, ve a descargar este increible juego a su post ofic
 <br>
 
 <div align="center">
+  <a target="_blank" href= "https://www.doomworld.com/profile/30309-chris194/"> Perfil de Chris GEC Doomworld </a> 
+</div>
+
+<br>
+
+<div align="center">
   <a target="_blank" href= "https://doom.fandom.com/wiki/Sony_PlayStation"> Doomwiki Doom PSX Original </a> 
 </div>
 
