--- a/download.html
+++ b/download.html
@@ -56,7 +56,7 @@ body {
 <br>
 
 <div align="center">
-  <b>Si te da pereza ir de pagina en pagina para descargar los juegos de Doomer (No te preocupes lo entiendo, a mi igual me daria flojera) pongo los links directos a todos los juegos y paleta de colores disponibles en ITCH.IO!<span style="cursor:text">Descargar</span>
+  <b>Si te da pereza ir de pagina en pagina para descargar los juegos de Doomer (No te preocupes lo entiendo, a mi igual me daria flojera) pongo los links directos a todos los juegos y paleta de colores disponibles en ITCH.IO!
   </b>   
 </div>
 
