--- a/index.html
+++ b/index.html
@@ -433,6 +433,22 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
+<form method="get" action="8bits.html">
+
+  <button type="submit">
+
+    <b>Doomer In 8 Bits</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
 <form target="_blank" method="get" action="doom.html">
 
   <button type="submit">
