--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.instagram.com/Doomer6699/"> Instagram </a> 
+  <a target="_blank" href= "https://www.instagram.com/doomer6699/"> Instagram </a> 
 </div>
 
 <div align="center">
@@ -135,10 +135,6 @@ body {
 
 <div align="center">
   <a target="_blank" href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://discord.gg/W6VQsjVTJg"> Discord </a> 
 </div>
 
 <div align="center"> 
@@ -507,31 +503,11 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCYcOJgC3tyKLnbSRtrPsZAw"> Bala </a> 
-</div>
-
-<div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCPaQmL2_7ux2zqFoUnwqCPA"> Toyota Corolla </a> 
-</div>
-
-<div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
-</div>
-
-<div align="left">
   <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
 </div>
 
 <div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UC-RnyUn9SkxAHaIflGoH50A"> Usario generico </a> 
-</div>
-
-<div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCxAAer9-cktE4nVHwliNMKA"> Alejandro La Bellota </a> 
-</div>
-
-<div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Patagonia Editor Pro </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
 </div>
 
 <br>
@@ -544,7 +520,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <b>Only quality trash since 2018.</b>
 
 <div align="center">
-  <b> <a target="_blank" href="banana.html">-Doomer-</a> <b>
+  <b> <a target="_blank" href="banana.html">-DOOMER-</a> <b>
 
 </div>
 
