--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,29 @@ body {
 
 
 <div align="center"><h2 class="bloque1">
+  <b>22 de Junio del año 2023 06:56AM<b>
+</div></h2></div>
+
+<br>
+
+<div align="center">
+  <b>A Little Update!<b>
+    <br> 
+    <b>¡Sigo vivo! después de un largo tiempo (Medio año) sin actualizar la página estoy de regreso! El videojuego del canal va por muy buen camino, la optimización es lo primordial en juegos para consolas tan antiguas, he vuelto a los directos recientemente después del gran épico fin de año fin de temporada! ¡Sin embargo, creo que me he quedado sin ideas para los directos no canon, una 4ta temporada de directos no creo que suceda, al menos por el momento, supongo que volveré a Doomer en Minecraft o jugaré videojuegos antiguos de la NES como hackroms y homebrews creados por la comunidad, volver a Doom siempre es una opción!<b>
+  </div>
+
+<div align="center">
+<img src="GIF/update.gif" height="320px" width="320px">
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center"><h2 class="bloque1">
   <b>01 de Enero del año 2023 03:24PM<b>
 </div></h2></div>
 
