--- a/8bits.html
+++ b/8bits.html
@@ -81,6 +81,35 @@ Hay una nueva cortinilla de presentacion para la intro en el juego, es la que es
 <img src="IMG/8bitsdoomer.png" height="200px" width="200px">
 </div>
 
+<br>
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="blog.html">
+
+  <button type="submit">
+
+    <b>Blog del 26 de Julio del 2023 hablando del juego del canal picale aquí!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+<br>
+
 </body>
 
 </html>
