--- a/index.html
+++ b/index.html
@@ -89,18 +89,29 @@ body {
 
 <div align="center"><h1 class="Titulo"> DOOMER6699 </h1></div>
 
+<!-- Hum... Con que sabes de F12... -->
+
 <br>
 <br>    
 <br>
 <br>
 <br>    
 
-<div align="center">
-  <b>Archivos MP4 Con Caracter Humoristico</b> <b>La pagina oficial del canal en HTML5!</b>   
-</div>
+<div align="center"><h2 class="bloque1"> Archivos MP4 Con Caracter Humoristico/@Doomer6699 </h2></div>
+
+<br>
 
 <div align="center">
-  <b>Prohibida la entrada a gente con olor a perfume caro.<b>
+  <b>La pagina oficial del canal en HTML5!</b>
+
+</div> 
+
+
+
+<br> 
+
+<div align="center">
+  <b>Prohibida la entrada a gente que no use desodorante o como minimo la mitad de un limon.<b>
 </div>
 
 <br>
@@ -118,11 +129,11 @@ body {
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a> 
+  <a target="_blank" href= "https://www.youtube.com/c/ArchivosMP4ConCaracterHumoristico/featured"> YouTube </a>
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://twitter.com/archydoomer"> Twitter </a> 
+  <a target="_blank" href= "https://twitter.com/archydoomer"> Twitter/X </a> 
 </div>
 
 <div align="center">
@@ -135,6 +146,18 @@ body {
 
 <div align="center">
   <a target="_blank" href= "https://www.facebook.com/profile.php?id=100088833919535"> Facebook </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.reddit.com/user/Doomguykiller69"> Reddit </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://github.com/doomer6699"> GitHub </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.twitch.tv/doomer6699"> Twitch </a> 
 </div>
 
 <div align="center"> 
@@ -150,10 +173,10 @@ body {
 <div align="center"><h3 class="bloque2"> 28 de Diciembre del año 2022 </h3></div>
 
 <div align="center"> 
-<b>Ahora a todo color y con bajo presupuesto la pagina del canal Archivos MP4 Con Caracter Humoristico a llegado! 
+<b>Ahora a todo color y con bajo presupuesto la pagina del canal <a target="_blank" href= "https://www.youtube.com/@Doomer6699/streams"> @Doomer6699 </a> a llegado! 
 creada en lenguaje HTML5 y poco, pero muy muy muy poco de CSS, dentro de los servidores de GitHub! (dios bendiga GH)
 <br>
-Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDumer, de los futuros proyectos como los videojuegos o especiales en directo o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
+Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para todo aquel que quiera enterarse del Lore del universo ARCHYDoomer, de los futuros proyectos como los videojuegos o especiales en directo o simplemente para ver mi poca estabilidad mental desaparecer dia a dia en los post que subire a manera de blog!
 </b>
 </div>
 
@@ -161,6 +184,88 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 <img src="IMG/CatDoom.png" height="150px" width="150px">
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center">
+  <div align="center"><h2 class="bloque1"> Aquí puedes encontrar a otras versiones de Doomer</h2></div>
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtQYIJyjriVVSbdzlcKPUzK"> Zoombertron en Zombotron! </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsLCbTEFeyhelRXhX5aMIgE"> Doomer En El Mundo OpenSource </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvzMYt2psHnt_msZy7KOotK"> Doomer Retro </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHv2nIQSi78ltLihzfc5bWPT"> Doomer Prime Creando Dimensiones y a otros Doomers </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHupQpcoLlNqvtpq5xmhSi-k"> DUMER EN MINECRAFT T0</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvgN5bDYZYgAoF7e6idPVRn"> Doomer En Minecraft! T1 </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsuF5Yv8O0WBFS0Y5t8drBZ"> DUMER EN PARADISE! </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHs-xi7KbExsC-7owFr6xxjU"> RARE/HES </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtj8mPle_-2tqbqfubFNojH"> DOOMER T0</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsd8PZFRroGbuolYmsuTIIe"> DUMER T0.5</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHtkzoBMluhaCiaaZHD2Rk2h"> DUMER T1</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHu-EalCHTLfgEeqjokuON6C"> DUMER T2</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHvWhyg-nORHKqL_zbxYIHFi"> DUMER T3</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHuuUn-iDeYuFUH4sutDGQTA"> DUMER GEEK</a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHuvUJ7YwOCgpmhCNfe_RKf6"> DUMER EN DOOM</a> 
+</div>
+
+<br>
+
+<div align="center">
+<img src="IMG/httkb.png" height="180px" width="180px">
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
@@ -227,32 +332,16 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <div align="center"><h1> ¡Noticias! </h1></div>
 
 <div align="center"> 
-<b> Hay un nuevo post en Itch.Io disponible en el que hablo del nuevo juego en desarrollo!
+<b> Hay un nuevo blog hablando del juego del canal picale aquí y ve el blog del 26 de julio del 2023!
 </b>
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://itch.io/blog/469022/el-nuevo-juego-que-unir-universos-alternos-en-8bits"> Ve el nuevo Devlog aquí </a> 
+  <a target="_blank" href= "blog.html"> Click aquí para ver el blog del videojuego! </a> 
 </div>
 
 <div align="center">
-<img src="IMG/gameboycartridgelabel.png" height="150px" width="180px">
-</div>
-
-<br>
-
-<div align="center"><h1> ¡Nuevo blog post Especial Fin de año/fin de temporada!</h1></div>
-
-<br>
-
-<div align="center">
-  <a target="_blank" href= "blog.html"> Click aquí para ver el blog! </a> 
-</div>
-
-<br>
-
-<div align="center">
-<img src="GIF/mars.gif" height="150px" width="150px">
+<img src="IMG/PyGame.png" height="150px" width="180px">
 </div>
 
 <br>
@@ -506,8 +595,21 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
 </div>
 
+<div align="left"> 
+<b> Canales Muy Zombotronicos!
+</b>
+</div>
+
 <div align="left">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCkW7sIXLCJhuGehIPIE4Cuw"> Soy El Vengador! </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UC-15IARUAZpUHgQyccKww5w"> El Zombotronico </a> 
+</div>
+
+<div align="left">
+  <a target="_blank" href= "https://www.youtube.com/channel/UCF990gdXwa8TDiCPik6erzA"> •CRiS‹h1›Pro </a> 
+</div>
+
+<div align="left">
+  <a target="_blank" href= "https://www.youtube.com/@sfpro6978"> •SFpro </a> 
 </div>
 
 <br>
@@ -552,4 +654,4 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 
 
-<!-- Un programado coreano programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Wong Chu Fo tengo 34 años y naci en corea del sur, la buena corea -->
+<!-- Un diseñador de paginas web coreano programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Wong Chu Fo tengo 34 años y naci en corea del sur, la buena corea -->
