--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,31 @@ body {
 
 
 <div align="center"><h2 class="bloque1">
+  <b>26 de Julio del año 2023 03:13PM<b>
+</div></h2></div>
+
+<br>
+
+<div align="center">
+  <b>Sobre el videojuego de Doomer<b>
+    <br> 
+    <b>HeyOi Internautas!
+      Sigo aquí, con un nuevo blog para la página, esta vez actualizando sobre el juego del canal, y que creees!!!
+      Ya vas a decir "Un nuevo reinicio!"
+      Y si mi estimado usuario intergaláctico genérico, hay un nuevo reinicio para el juego, GBS se me ha quedado corto y parece ser que no tendrá otra actualización en un tiempo, por lo que decidí cambiar a PyGame un módulo para Python el lenguaje de programación, en el que podre dar rienda suelta a mi creatividad y agregar todo lo que quiero y necesito!
+      Por lo que esto será un largo camino mi estimado!
+      Pero prometo agregar ahora si muchas más cosas de las que planeo a día de hoy, entre ellas los personajes icónicos del canal, tanto los que pertenecen a temporadas como la T3, T2, y T0 como los clásicos Evy, Elaine IA y muchos más!
+      Lo bueno de este reinicio es que puedo reutilizar los assets que ya cree y que he ido subiendo a IG, por lo que gráficamente no cambiara nada, lo que cambiara será la resolución y en donde se podrá jugar, decidí que por ahora el juego será exclusivo de PC, para no sobre pensar tanto en todos los demás dispositivos, por ahora eso es todo trabajaré arduamente en el código del juego! ¡Gracias por leer usuario genérico! Seeyachomp!
+      <b>
+  </div>
+
+<div align="center">
+<img src="IMG/PyGame.png" height="320px" width="320px">
+</div>
+
+<br>
+
+<div align="center"><h2 class="bloque1">
   <b>22 de Junio del año 2023 06:56AM<b>
 </div></h2></div>
 
