--- a/index.html
+++ b/index.html
@@ -564,6 +564,28 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
+<!-- Aquí es donde puedes dejarme tus comentarios! -->
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="VIvpmJVz"></script>
+
+
+<div class="fb-comments" data-href="https://doomer6699.github.io/Doomer.github.io/" data-width="500" data-numposts="6"></div>
+
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<br>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
