--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="VIvpmJVz"></script>
 
 
-<div class="fb-comments" data-href="https://doomer6699.github.io/Doomer.github.io/" data-width="500" data-numposts="6"></div>
+<div align="center" class="fb-comments" data-href="https://doomer6699.github.io/Doomer.github.io/" data-width="500" data-numposts="6"></div>
 
 
 <div align="center"> 
