--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 
-<div id="fb-root"></div>
+<div align="center" id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="VIvpmJVz"></script>
 
 
