--- a/index.html
+++ b/index.html
@@ -614,10 +614,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center"> 
-<b> -------------------------------------------------------
+<div align="left"> 
+<b> Dejame un comentario desde tu perfil de Facebook!
 </b>
 </div>
+
+<br>
 
 <!-- Aquí es donde puedes dejarme tus comentarios! -->
 
