--- a/index.html
+++ b/index.html
@@ -582,33 +582,33 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="left"> 
+<div align="center"> 
 <b> Canales Con Calidad Media Baja!
 </b>
 </div>
 
-<div align="left">
+<div align="center">
   <a target="_blank" href= "https://www.youtube.com/channel/UCRJ3R_v78u9JvU5cvfkAaWg"> Un CheemsJolote </a> 
 </div>
 
-<div align="left">
+<div align="center">
   <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
 </div>
 
-<div align="left"> 
+<div align="center"> 
 <b> Canales Muy Zombotronicos!
 </b>
 </div>
 
-<div align="left">
+<div align="center">
   <a target="_blank" href= "https://www.youtube.com/channel/UC-15IARUAZpUHgQyccKww5w"> El Zombotronico </a> 
 </div>
 
-<div align="left">
+<div align="center">
   <a target="_blank" href= "https://www.youtube.com/channel/UCF990gdXwa8TDiCPik6erzA"> •CRiS‹h1›Pro </a> 
 </div>
 
-<div align="left">
+<div align="center">
   <a target="_blank" href= "https://www.youtube.com/@sfpro6978"> •SFpro </a> 
 </div>
 
