--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="icon" type="ico" href="IMG/AMP4CCH.ico">
+<link rel="icon" type="png" href="IMG/doomerwm.png">
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
