--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/blackspace.jpg);
-      background-size:1920px 1080px;
+      background-image: url(IMG/space2.jpg);
+      background-size:1024px 1024px;
       min-height:100%;
       
       background-size: cover;
@@ -154,6 +154,10 @@ body {
 
 <div align="center">
   <a target="_blank" href= "https://github.com/doomer6699"> GitHub </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://gitlab.com/doomer6699"> GitLab </a> 
 </div>
 
 <div align="center">
@@ -370,6 +374,10 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
+<div align="center"><h2 class="bloque1">
+  <b>-Botones para otras paginas-<b>
+</div></h2></div>
+
 <br>
 
 <div align="center">
@@ -426,7 +434,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
   <button type="submit">
 
-    <b>Good Music</b>
+    <b>Las Clasicas De Cajon De Doomer</b>
 
   </button>
 
