--- a/music.html
+++ b/music.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="icon" type="ico" href="IMG/ArchyMP4CCHumoristico.ico">
+<link rel="icon" type="jpg" href="IMG/headphones.png">
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
-  <title>Music</title>
+  <title>Las Clasicas De Cajon De Doomer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -15,28 +15,61 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/hpm.jpg);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
       }
   </style>
 
+<!-- CSS Block End --> 
+
 <body>
 
-<!-- CSS Block End -->  
-
 <div align="center"><h2 class="bloque1">
-  <b>Que curioso, aun no hay nada aquí.<b>
+  <b>Las Clasicas de Cajon de Doomer6699.<b>
 </div></h2></div>
 
 <br>
+
+<div align="center"> 
+<b>Doomer tiene un gusto musical algo bizarro, desde las clasicas del duranguense hasta bachata! claro esta, no es lo que lleva en su clasico walkman!</b>
+</div>
+
 <br>
 
 <div align="center">
-<img src="IMG/buebos.png" height="500px" width="500px">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuEoyf_h_yv_PCpz3qsiRxo" frameborder="0" allow="autoplay"></iframe>
+
+</div>
+
+<br>
+
+<div align="center"> 
+<b>La lista se actualiza cada que Doomer encuentra un clasico de su infancia!</b>
+</div>
+
+<br>
+
+<div align="center"><h2 class="bloque1">
+  <b>La musica que usa Doomer en sus directos.<b>
+</div></h2></div>
+
+<br>
+
+<div align="center">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuhlKLhSBW9SzQ3a4Lry-sD" frameborder="0" allow="autoplay"></iframe>
+
+</div>
+
+<div align="center">
+<img src="IMG/headphones.png" height="280px" width="250px">
 </div>
 
 </body>
 
 </html>
+
+<!-- Que haces viendo este mensaje? -->
