--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 
+
+<!-- 1024px 1024px; min-height:100%; -->
 <!-- CSS Block Start -->
 
   <style type="text/css">
   
 body {
-      color: floralwhite;
+      color: white;
       background-image: url(IMG/space2.jpg);
-      background-size:1024px 1024px;
-      min-height:100%;
-      
-      background-size: cover;
+      background-size: cover;     
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       }
   </style>
 
@@ -27,7 +28,7 @@ body {
     .Titulo { 
           margin: 0px;
           font-family: "Optima";
-          color: darkred; 
+          color: red; 
           font-size: 50px;
           text-align: center;
           background-image: url(IMG/black.jpg);
@@ -97,7 +98,7 @@ body {
 <br>
 <br>    
 
-<div align="center"><h2 class="bloque1"> Archivos MP4 Con Caracter Humoristico/@Doomer6699 </h2></div>
+<div align="center"><h2 class="bloque1"> Archivos MP4 Con Carácter Humorístico/@Doomer6699 </h2></div>
 
 <br>
 
@@ -280,7 +281,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center"><h1> Videos Random </h1></div>
+<div align="center"><h1> Video Random </h1></div>
 
 <br>
 
