--- a/meme.html
+++ b/meme.html
@@ -15,10 +15,11 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/galaxia.jpg);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
+      background-attachment: fixed;
       }
   </style>
 
@@ -111,6 +112,19 @@ body {
 
 <div align="center">
 <img src="MEME/canales.png" height="220px" width="360px">
+</div>
+
+<br>
+
+<div align="center"> 
+<b>WANTED!
+</b>
+</div>
+
+<br>
+
+<div align="center">
+<img src="MEME/wanted.png" height="220px" width="360px">
 </div>
 
 <br>
