--- a/music.html
+++ b/music.html
@@ -19,6 +19,7 @@ body {
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
+      background-attachment: fixed;
       }
   </style>
 
@@ -40,7 +41,7 @@ body {
 
 <div align="center">
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuEoyf_h_yv_PCpz3qsiRxo" frameborder="0" allow="autoplay"></iframe>
+<iframe width="350" height="300" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuEoyf_h_yv_PCpz3qsiRxo" frameborder="0" allow="autoplay"></iframe>
 
 </div>
 
@@ -60,7 +61,7 @@ body {
 
 <div align="center">
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuhlKLhSBW9SzQ3a4Lry-sD" frameborder="0" allow="autoplay"></iframe>
+<iframe width="350" height="300" src="https://www.youtube.com/embed/videoseries?list=PLh46r6L9GKHuhlKLhSBW9SzQ3a4Lry-sD" frameborder="0" allow="autoplay"></iframe>
 
 </div>
 
