--- a/aboutme.html
+++ b/aboutme.html
@@ -15,10 +15,11 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/universe.png);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
+      background-attachment: fixed;
       }
   </style>
 
