--- a/lore.html
+++ b/lore.html
@@ -19,6 +19,7 @@ body {
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
+      background-attachment: fixed;
       }
   </style>
 
